// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gardener-dashboard rolebinding should render the template with default values 1`] = `
Object {
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "RoleBinding",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-application-0.1.0",
    },
    "name": "gardener.cloud:system:dashboard-github-webhook",
    "namespace": "garden",
  },
  "roleRef": Object {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "Role",
    "name": "gardener.cloud:system:dashboard-github-webhook",
  },
  "subjects": Array [
    Object {
      "kind": "ServiceAccount",
      "name": "gardener-dashboard",
      "namespace": "garden",
    },
  ],
}
`;

exports[`gardener-dashboard rolebinding when virtual garden is enabled should render the template 1`] = `
Object {
  "apiVersion": "rbac.authorization.k8s.io/v1",
  "kind": "RoleBinding",
  "metadata": Object {
    "labels": Object {
      "app.kubernetes.io/component": "dashboard",
      "app.kubernetes.io/instance": "gardener-dashboard",
      "app.kubernetes.io/managed-by": "Helm",
      "app.kubernetes.io/name": "gardener-dashboard",
      "helm.sh/chart": "gardener-dashboard-application-0.1.0",
    },
    "name": "gardener.cloud:system:dashboard-github-webhook",
    "namespace": "garden",
  },
  "roleRef": Object {
    "apiGroup": "rbac.authorization.k8s.io",
    "kind": "Role",
    "name": "gardener.cloud:system:dashboard-github-webhook",
  },
  "subjects": Array [
    Object {
      "apiGroup": "rbac.authorization.k8s.io",
      "kind": "User",
      "name": "runtime-cluster:system:serviceaccount:garden:gardener-dashboard",
    },
  ],
}
`;
